# Sentinal_AI-Control-Room

./: .dockerignore  .env.example  .gitignore  README.md  Sentinel_AI_Pitch.pptx  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  vercel.json
.github/workflows/: ci.yml
.streamlit/: config.toml
api/demo/: view.py
deploy/: Dockerfile.api_gateway  docker-compose.yml  prometheus.yml
frontend/: app.js  index.html  styles.css  vercel.json
libs/sentinel/: __init__.py  fleet.py
libs/sentinel/agents/: __init__.py  base.py
libs/sentinel/config/: __init__.py  settings.py
libs/sentinel/contracts/: __init__.py  base.py  enums.py  events.py  value_objects.py
libs/sentinel/control/: __init__.py  phase.py
libs/sentinel/dashboard/: __init__.py  agent.py  readmodel.py
libs/sentinel/decision/: __init__.py  agent.py  policy.py
libs/sentinel/explainability/: __init__.py  agent.py  generator.py
libs/sentinel/incident/: __init__.py  agent.py  rules.py
libs/sentinel/memory/: __init__.py  agent.py  repository.py
libs/sentinel/messaging/: __init__.py  bus.py  inmemory.py  (+2 more)
scripts/: demo_agents_loop.py  demo_intersection.py  demo_perception.py  generate_pitch_deck.py
services/: __init__.py
services/api_gateway/: __init__.py  main.py
sim/: README.md  build_network.py
sim/network/: intersection.edg.xml  intersection.nod.xml  routes.rou.xml
tests/: conftest.py  test_api_gateway.py  test_closed_loop_agents.py  test_config.py  test_contracts.py  test_control_phase.py  test_dashboard.py  test_decision_agent.py  test_decision_policy.py  test_demo_agents_loop.py  test_explainability.py  test_fleet.py  test_incident.py  test_memory.py  test_messaging.py  test_observability.py  test_orchestrator.py  test_perception_density.py  test_perception_geometry.py  test_perception_movement.py  test_perception_pipeline.py  test_perception_tracking.py  test_perception_worker.py  test_prediction_agent.py  test_prediction_forecaster.py  test_services.py  test_signal_controller.py  test_simulation.py
(+35 files in other folders)
