[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-core"
version = "0.1.0"
description = "Sentinel AI - shared foundation libraries (contracts, messaging, config, observability)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sentinel AI Team" }]
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
rabbitmq = ["aio-pika>=9.4"]
redis = ["redis>=5.0"]
perception = ["ultralytics>=8.1", "opencv-python>=4.9", "numpy>=1.26"]
llm = ["anthropic>=0.40"]
api = ["fastapi>=0.115", "uvicorn>=0.32", "websockets>=13.0", "httpx>=0.27"]
streamlit = ["streamlit>=1.38"]
tracing = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["libs/sentinel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["libs", "."]
addopts = "-ra -q"
filterwarnings = ["error::DeprecationWarning:sentinel.*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["libs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "B"]

[tool.mypy]
python_version = "3.11"
mypy_path = "libs"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "aio_pika.*",
    "redis.*",
    "opentelemetry.*",
    "traci.*",
    "sumolib.*",
    "ultralytics.*",
    "cv2.*",
    "anthropic.*",
    "fastapi.*",
    "uvicorn.*",
    "websockets.*",
]
ignore_missing_imports = true
